# firstcut

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .windsurfrules  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PYPI.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
docs/ADR/: 0001-mandatory-sdlc.md
docs/domain/: glossary.md
scripts/: forge.py  release_bump.py  release_check.py  release_tag.py
skills/domain-model/: SKILL.md
skills/grill-me/: SKILL.md
skills/implementation-simplicity/: SKILL.md
skills/interface-design/: SKILL.md
skills/qa/: SKILL.md
skills/request-refactor-plan/: SKILL.md
skills/tdd/: SKILL.md
skills/ubiquitous-language/: SKILL.md
src/firstcut/: __init__.py  _core.py  cli.py  config.py  generate.py  scaffolds.py  writers.py
tests/: __init__.py  test_cli.py  test_core.py  test_forge.py  test_wrappers.py
