[project]
name = "firstcut"
version = "0.1.0"
description = "First-principles project scaffolder with embedded AI skills"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-fail-under=80 -q"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C90"]

[tool.black]
line-length = 88
target-version = ["py311"]
