[project]
name = "firstcut"
version = "0.1.0"
description = "First-principles project scaffolder with embedded AI skills"
readme = {file = "PYPI.md", content-type = "text/markdown"}
authors = [
    {name = "Shail Shah", email = "shailvshah@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "scaffolding",
    "project-generator",
    "ai-tools",
    "codex",
    "claude",
    "clean-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shailvshah/firstcut"
Repository = "https://github.com/shailvshah/firstcut"
Issues = "https://github.com/shailvshah/firstcut/issues"

[project.scripts]
firstcut = "firstcut.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.4",
    "pre-commit>=3.7",
    "detect-secrets>=1.4",
    "twine>=6.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/skills",
    "/packages",
    "/README.md",
    "/PYPI.md",
    "/LICENSE",
    "/Makefile",
    "/pyproject.toml",
    "/uv.lock",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/.cursorrules",
    "/.windsurfrules",
    "/.pre-commit-config.yaml",
    "/.github/workflows/ci.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/firstcut --cov-fail-under=95 -q"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C90"]

[tool.ruff.lint.per-file-ignores]
# _core.py is a code generator. Its string literals ARE the generated files
# (markdown prose, YAML, Go/Python/TS code). Two rules are intentionally relaxed:
#   E501 — line length inside generated content is meaningless for the generator itself
#   F541 — f-strings without placeholders are common in generators where a
#           variable may be added later; they're harmless and fixing them risks
#           accidentally changing Go {{ }} escape sequences to { }
"src/firstcut/_core.py" = ["E501", "F541"]

[tool.black]
line-length = 88
target-version = ["py311"]
